# Dynamic-UI

./: .gitmodules  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/kotlin/: Test.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/: MainActivity.kt  test.kt
app/src/main/java/com/Audio/: ExecuteAudioAndroid.kt
app/src/main/java/com/Presentation/: test2.kt
app/src/main/java/com/mathEngine/: CircularMotionEngine.kt  CircularMotionUI.kt  MainScreen.kt  ParticleSystem.kt  StartScreen.kt  getScreenCenter.kt
app/src/main/java/com/ui/: BackgroundUI.kt  MainScreen.kt  SatellitePointUI.kt  StartScreen.kt  TrailUI.kt
app/src/main/res/values/: themes.xml
desktopApp/: build.gradle.kts
desktopApp/src/main/java/SensoryLinks/Audio/: AudioActivity.kt  AudioSource.kt  ExecuteAudioWindows.kt  WindowsAudio.kt  WindowsAudioDriver.kt
desktopApp/src/main/java/com/: WindowsMain.kt  test.kt
desktopApp/src/main/java/com/desktopapp/: IntentManagerContract.kt  Test.kt  WindowsMain.kt  test.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sensoryUnit/: build.gradle.kts
sensoryUnit/src/androidDeviceTest/kotlin/com/sensoryunit/: ExampleInstrumentedTest.kt
sensoryUnit/src/androidHostTest/kotlin/com/sensoryunit/: ExampleUnitTest.kt
sensoryUnit/src/cpp/: CMakeLists.txt  testui.cpp
sensoryUnit/src/iosMain/kotlin/com/sensoryunit/: Platform.ios.kt
shared/: build.gradle.kts
shared/src/commonMain/kotlin/com/: Test.kt
sharedUI/: build.gradle.kts
(+144 files in other folders)
